--- a/Fotography/styles/main.css
+++ b/Fotography/styles/main.css
@@ -23,16 +23,22 @@ html {
   font-family: "Jost", sans-serif;
 }
 
-.container {
-  max-width: 75rem;
-  margin: 0px auto;
-}
-
 /** 1200px oder schmaler */
 /** 992px oder schmaler */
 /** 768px oder schmaler */
 /** 576px oder schmaler */
 /** Breakpoints */
+.container {
+  max-width: 75rem;
+  margin: 0px auto;
+  padding: 0 2rem;
+}
+@media (max-width: 36em) {
+  .container {
+    padding: 0 1rem;
+  }
+}
+
 .header {
   height: 35rem;
   min-height: calc(13rem + 32vw);
@@ -195,6 +201,8 @@ html {
 }
 .navigation__list-item--menu .navigation__list-item-link {
   margin-top: 0.4rem;
+  margin-right: 0;
+  padding-right: 0;
 }
 .navigation__list-item--menu .navigation__list-item-link:hover {
   border-bottom: none;
@@ -202,6 +210,8 @@ html {
 }
 .navigation__list-item-link--logo {
   margin-top: 0.9rem;
+  padding-left: 0;
+  margin-left: 0;
 }
 .navigation__list-item-link--logo:hover {
   border-bottom: none;
@@ -220,4 +230,23 @@ html {
   vertical-align: middle;
   position: relative;
   top: -0.075em;
+}
+
+.motivation {
+  margin-top: 2rem;
+}
+
+.motivation__column-text {
+  float: left;
+  width: 33.33%;
+}
+
+.motivation__column-images {
+  float: left;
+  width: 66.66%;
+}
+
+.motivation__image {
+  max-width: 100%;
+  margin-left: 25%;
 }/*# sourceMappingURL=main.css.map */
