--- a/Fotography/styles/main.css
+++ b/Fotography/styles/main.css
@@ -241,12 +241,26 @@ html {
   width: 33.33%;
 }
 
+.motivation__text-heading {
+  margin-top: 4rem;
+  color: #26464d;
+  font-weight: 500;
+}
+.motivation__text-heading::before {
+  content: "";
+  display: block;
+  width: 6rem;
+  height: 0.25rem;
+  background-color: #407682;
+  margin-bottom: 0.5rem;
+}
+
 .motivation__column-images {
   float: left;
   width: 66.66%;
 }
 
 .motivation__image {
-  max-width: 100%;
+  max-width: 50%;
   margin-left: 25%;
 }/*# sourceMappingURL=main.css.map */
