--- a/Fotography/styles/pages/home/_motivation.scss
+++ b/Fotography/styles/pages/home/_motivation.scss
@@ -1,3 +1,5 @@
+@use "../../abstracts" as *;
+
 .motivation {
     margin-top: 2rem;
 }
@@ -7,12 +9,27 @@
     width: 33.33%;
 }
 
+.motivation__text-heading {
+    margin-top: 4rem;
+    color: $color-secondary;
+    font-weight: 500;
+
+    &::before {
+        content: "";
+        display: block;
+        width: 6rem;
+        height: 0.25rem;
+        background-color: $color-secondary-light;
+        margin-bottom: 0.5rem;
+    }
+}
+
 .motivation__column-images {
     float: left;
     width: 66.66%;
 }
 
 .motivation__image {
-    max-width: 100%;
+    max-width: 50%;
     margin-left: 25%;
 }
