--- a/Fotography/styles/main.css
+++ b/Fotography/styles/main.css
@@ -249,10 +249,15 @@ html {
 .motivation__text-heading::before {
   content: "";
   display: block;
-  width: 6rem;
+  width: 3rem;
   height: 0.25rem;
   background-color: #407682;
   margin-bottom: 0.5rem;
+}
+
+.motivation__text {
+  color: #26464d;
+  margin-top: 0.2rem;
 }
 
 .motivation__column-images {
