--- a/Fotography/styles/pages/home/_motivation.scss
+++ b/Fotography/styles/pages/home/_motivation.scss
@@ -17,11 +17,16 @@
     &::before {
         content: "";
         display: block;
-        width: 6rem;
+        width: 3rem;
         height: 0.25rem;
         background-color: $color-secondary-light;
         margin-bottom: 0.5rem;
     }
+}
+
+.motivation__text {
+    color: $color-secondary;
+    margin-top: 0.2rem;
 }
 
 .motivation__column-images {
