--- a/Fotography/styles/pages/home/_motivation.scss
+++ b/Fotography/styles/pages/home/_motivation.scss
@@ -32,9 +32,28 @@
 .motivation__column-images {
     float: left;
     width: 66.66%;
+    position: relative;
 }
 
 .motivation__image {
-    max-width: 50%;
-    margin-left: 25%;
+    width: 50%;
+    position: absolute;
+
+    &--first {
+        width: 33%;
+        top: 10rem;
+        left: 10%;
+        z-index: 2;
+    }
+
+
+
+    &--third {
+        width: 75%;
+        right: 0rem;
+        z-index: 1;
+    }
+    
+    
+   
 }
