--- a/Fotography/styles/pages/home/_motivation.scss
+++ b/Fotography/styles/pages/home/_motivation.scss
@@ -38,22 +38,25 @@
 .motivation__image {
     width: 50%;
     position: absolute;
+    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.5); 
 
     &--first {
-        width: 33%;
+        width: 75%;
+        right: 0rem;
+        z-index: 1;
+    }
+
+    &--second {
+        width: 37%;
         top: 10rem;
         left: 10%;
         z-index: 2;
     }
 
-
-
     &--third {
-        width: 75%;
-        right: 0rem;
-        z-index: 1;
+        z-index: 3;
+        width: 42%;
+        top: 5rem;
+        left: 40%;
     }
-    
-    
-   
 }
