--- a/Fotography/styles/main.css
+++ b/Fotography/styles/main.css
@@ -270,6 +270,7 @@ html {
   width: 50%;
   position: absolute;
   box-shadow: 0 0 1rem rgba(0, 0, 0, 0.5);
+  box-sizing: content-box;
 }
 .motivation__image--first {
   width: 75%;
@@ -287,4 +288,8 @@ html {
   width: 42%;
   top: 5rem;
   left: 40%;
+}
+.motivation__image:hover {
+  border: 0.33rem solid rgb(0, 226, 156);
+  padding: 0.33rem;
 }/*# sourceMappingURL=main.css.map */
