--- a/Fotography/styles/main.css
+++ b/Fotography/styles/main.css
@@ -266,6 +266,10 @@ html {
   position: relative;
 }
 
+/**
+ * @param $top: Position from top (in rem)
+ * @param $left: Position from left (in %)
+ */
 .motivation__image {
   width: 50%;
   position: absolute;
@@ -274,14 +278,23 @@ html {
 }
 .motivation__image--first {
   width: 75%;
-  right: 0rem;
   z-index: 1;
+  top: 0rem;
+  left: 25%;
+}
+.motivation__image--first:hover {
+  top: -0.66rem;
+  left: calc(25% - 0.66rem);
 }
 .motivation__image--second {
   width: 37%;
+  z-index: 2;
   top: 10rem;
   left: 10%;
-  z-index: 2;
+}
+.motivation__image--second:hover {
+  top: 9.34rem;
+  left: calc(10% - 0.66rem);
 }
 .motivation__image--third {
   z-index: 3;
@@ -289,7 +302,12 @@ html {
   top: 5rem;
   left: 40%;
 }
+.motivation__image--third:hover {
+  top: 4.34rem;
+  left: calc(40% - 0.66rem);
+}
 .motivation__image:hover {
   border: 0.33rem solid rgb(0, 226, 156);
   padding: 0.33rem;
+  z-index: 10;
 }/*# sourceMappingURL=main.css.map */
