--- a/Fotography/styles/main.css
+++ b/Fotography/styles/main.css
@@ -275,6 +275,9 @@ html {
   position: absolute;
   box-shadow: 0 0 1rem rgba(0, 0, 0, 0.5);
   box-sizing: content-box;
+  filter: grayscale(50%);
+  transform: scale(1);
+  transition: filter ease-in-out 0.9s, transform ease-in-out 0.5s;
 }
 .motivation__image--first {
   width: 75%;
@@ -307,6 +310,8 @@ html {
   left: calc(40% - 0.66rem);
 }
 .motivation__image:hover {
+  filter: grayscale(0%);
+  transform: scale(1.05);
   border: 0.33rem solid rgb(0, 226, 156);
   padding: 0.33rem;
   z-index: 10;
