--- a/Fotography/styles/layout/_header.scss
+++ b/Fotography/styles/layout/_header.scss
@@ -13,17 +13,17 @@
 }
 
 .header__slope {
-    position:  absolute;
+    position: absolute;
     left: 0;
     right: 0;
     bottom: 0;
     height: 10vw;
     z-index: 1;
 
-    background-image: linear-gradient(-5.71deg,  rgb(16, 28, 31) 50%, transparent 50.1%);
+    background-image: linear-gradient(-5.71deg, white 49.9%, transparent 50.1%);
     background-repeat: no-repeat;
-    background-position: center 101%;
-    background-size: 101vw 10vw;
+    background-position: center 100%;
+    background-size: 100vw 10vw;
 }
 
 .header__container {
