--- a/Fotography/styles/main.css
+++ b/Fotography/styles/main.css
@@ -21,7 +21,6 @@
 html {
   font-size: 100%;
   font-family: "Jost", sans-serif;
-  background-color: rgb(16, 28, 31);
 }
 
 /** 1200px oder schmaler */
@@ -65,10 +64,10 @@ html {
   bottom: 0;
   height: 10vw;
   z-index: 1;
-  background-image: linear-gradient(-5.71deg, rgb(16, 28, 31) 50%, transparent 50.1%);
+  background-image: linear-gradient(-5.71deg, white 49.9%, transparent 50.1%);
   background-repeat: no-repeat;
-  background-position: center 101%;
-  background-size: 101vw 10vw;
+  background-position: center 100%;
+  background-size: 100vw 10vw;
 }
 
 .header__container {
