--- a/Fotography/styles/pages/home/_tours.scss
+++ b/Fotography/styles/pages/home/_tours.scss
@@ -2,24 +2,44 @@
 
 $-tours-background-color: $color-secondary-dark;
 
+
+
 .tours {
     background-color: $-tours-background-color;
     height: 30rem;
     position: relative;
 }
 
-.tours::before {
+%tours__before-and-after {
     top: 0;
     position: absolute;
     content: "Tame the wild";
     text-transform: uppercase;
     color: $-tours-background-color;
     font-size: 10rem;
-    /* text-shadow: 0 0 1px white; */
-  
-    -webkit-text-stroke: 1px white;
-    text-stroke: 1px white;
+    text-shadow: 0 0 1px white;
 }
+
+.tours::before {
+    @extend %tours__before-and-after;
+
+    @supports (-webkit-text-stroke: 1px white) or (text-stroke: 1px white) {
+        -webkit-text-stroke: 1px white;
+        text-stroke: 1px white;
+        text-shadow: none;
+    }
+}
+
+.tours::after {
+    @extend %tours__before-and-after;
+
+    @supports (-webkit-text-stroke: 1px white) or (text-stroke: 1px white) {
+        -webkit-text-stroke: 1px transparent;
+        text-stroke: 1px transparent;
+        text-shadow: none;
+    }
+}
+
 
 .tours__heading {
     color: white;
