--- a/Fotography/styles/pages/home/_tours.scss
+++ b/Fotography/styles/pages/home/_tours.scss
@@ -2,8 +2,6 @@
 
 $-tours-background-color: $color-secondary-dark;
 
-
-
 .tours {
     background-color: $-tours-background-color;
     height: 30rem;
@@ -11,33 +9,43 @@ $-tours-background-color: $color-secondary-dark;
 }
 
 %tours__before-and-after {
-    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     position: absolute;
     content: "Tame the wild";
     text-transform: uppercase;
     color: $-tours-background-color;
     font-size: 10rem;
+    font-weight: bold;
     text-shadow: 0 0 1px white;
+    text-align: center;
+    z-index: 0;
+}
+
+@mixin -tours__before-and-after-stroke($color) {
+    @supports (-webkit-text-stroke: 2px #{$color}) or (text-stroke: 2px #{$color}) {
+        -webkit-text-stroke: 2px #{$color};
+        text-stroke: 2px #{$color};
+        text-shadow: none;
+    }
 }
 
 .tours::before {
     @extend %tours__before-and-after;
 
-    @supports (-webkit-text-stroke: 1px white) or (text-stroke: 1px white) {
-        -webkit-text-stroke: 1px white;
-        text-stroke: 1px white;
-        text-shadow: none;
-    }
+    @include -tours__before-and-after-stroke(rgba(255, 255, 255, 0.2));
 }
 
 .tours::after {
     @extend %tours__before-and-after;
 
-    @supports (-webkit-text-stroke: 1px white) or (text-stroke: 1px white) {
-        -webkit-text-stroke: 1px transparent;
-        text-stroke: 1px transparent;
-        text-shadow: none;
-    }
+    @include -tours__before-and-after-stroke(transparent);
+}
+
+.tours__container {
+    position: relative;
+    z-index: 1;
 }
 
 
