--- a/Fotography/styles/pages/home/_tours.scss
+++ b/Fotography/styles/pages/home/_tours.scss
@@ -59,3 +59,9 @@ $-tours-background-color: $color-secondary-dark;
     padding-bottom: 4rem;
     font-size: 2rem;
 }
+
+
+.tours__card-icon {
+    width: 4rem;
+    color: white;
+}
