--- a/Fotography/styles/abstracts/_mixins.scss
+++ b/Fotography/styles/abstracts/_mixins.scss
@@ -1,3 +1,5 @@
+@use "./variables" as *;
+
 @mixin clearfix() {
   &::after {
     display: block;
@@ -6,3 +8,14 @@
   }
 }
 
+@mixin make-container() {
+  max-width: 75rem;
+  margin: 0px auto;
+  padding: 0 2rem;
+
+  @include clearfix;
+
+  @media (max-width: $breakpoint-xs) {
+      padding: 0 1rem;
+  }
+}
