--- a/Fotography/styles/pages/home/_tours.scss
+++ b/Fotography/styles/pages/home/_tours.scss
@@ -46,7 +46,9 @@ $-tours-background-color: $color-secondary-dark;
 .tours__container { 
     position: relative;
     z-index: 1;
-} 
+
+    @include make-container();
+}
 
 
 .tours__heading {
