--- a/Fotography/styles/pages/home/_tours.scss
+++ b/Fotography/styles/pages/home/_tours.scss
@@ -70,7 +70,7 @@ $-tours-background-color: $color-secondary-dark;
 .tours__card {
     width: 20%;
     position: relative;
-    height: 20rem;
+    height: 21rem;
     overflow: hidden;
 }
 
@@ -86,10 +86,12 @@ $-tours-background-color: $color-secondary-dark;
     position: absolute;
     top: 0;
     left: 0;
+
+    filter: brightness(80%);
 }
 
 .tours__card-icon { 
-    width: 4rem;
+    width: 3rem;
     color: white;
     display: block;
 }
@@ -101,7 +103,10 @@ $-tours-background-color: $color-secondary-dark;
     bottom: 0;
 
     color: white;
-    padding: 0 1rem;
+    padding: 3rem 1rem 0 1rem;
+    text-shadow: 0 0 0.125rem black;
+
+    background-image: linear-gradient(180deg, transparent 0%, rgba(0, 0, 0, 0.25) 20%);
 }
 
 .tours__card-heading {
@@ -125,8 +130,8 @@ $-tours-background-color: $color-secondary-dark;
 }
 
 .tours__card-desc {
-    font-size: 0.9rem;
-    padding: 1rem 0;    
+    font-size: 0.8rem;
+    padding: 0.9rem 0;    
     background-image: linear-gradient(90deg, $color-primary 60%, transparent 60%);
     background-position-y: top;
     background-repeat: no-repeat;
