--- a/Fotography/styles/pages/home/_tours.scss
+++ b/Fotography/styles/pages/home/_tours.scss
@@ -2,6 +2,8 @@
 
 $-tours-background-color: $color-secondary-dark;
 
+$-tours-icon-size: 3rem;
+
 .tours {
     background-color: $-tours-background-color;
     position: relative;
@@ -80,9 +82,9 @@ $-tours-background-color: $color-secondary-dark;
     top: 0;
     left: 0;
     width: 100%;
-    height: 3rem;
+    height: $-tours-icon-size;
 
-    transform: translate(calc(-100% + 3rem), 0);
+    transform: translate(calc(-100% + #{$-tours-icon-size}), 0);
 
     transition: transform 1s ease-in-out;
 
@@ -100,15 +102,24 @@ $-tours-background-color: $color-secondary-dark;
     filter: brightness(80%);
 }
 
-.tours__card-icon { 
+.tours__card-icon-container {    
     position: absolute;
     top: 0;
     left: 0;
+    width: 100%;
 
-    width: 3rem;
+    transform: translate(0, 0);
+    transition: transform 1s ease-in-out;
+
+    .tours__card:hover & {
+        transform: translate(calc(50% - #{$-tours-icon-size / 2}), 0);
+    }
+}
+
+.tours__card-icon { 
+    width: $-tours-icon-size;
     color: white;
     display: block;
-    
 }
 
 .tours__card-content {
