--- a/Fotography/styles/pages/home/_tours.scss
+++ b/Fotography/styles/pages/home/_tours.scss
@@ -52,7 +52,6 @@ $-tours-icon-size: 3rem;
     @include make-container();
 }
 
-
 .tours__heading {
     color: white;
     text-transform: uppercase;
@@ -63,7 +62,6 @@ $-tours-icon-size: 3rem;
     padding-bottom: 4rem;
     font-size: 2rem;
 }
-
 
 .tours__cards {
     display: flex;
@@ -133,6 +131,13 @@ $-tours-icon-size: 3rem;
     text-shadow: 0 0 0.125rem black;
 
     background-image: linear-gradient(180deg, transparent 0%, rgba(0, 0, 0, 0.25) 20%);
+
+    transform: translate(0, calc(100% - 7.25rem));
+    transition: transform 1s ease-in-out;
+
+    .tours__card:hover & {
+        transform: translate(0, 0);
+    }
 }
 
 .tours__card-heading {
