--- a/Fotography/styles/pages/home/_tours.scss
+++ b/Fotography/styles/pages/home/_tours.scss
@@ -1,16 +1,17 @@
-@use "../../abstracts" as *;
+    @use "../../abstracts" as *;
 
-$-tours-background-color: $color-secondary-dark;
+    $-tours-background-color: $color-secondary-dark;
 
-$-tours-icon-size: 3rem;
+    $-tours-icon-size: 3rem;
+    $-tours-animation-duration: 0.25s;
 
-.tours {
+    .tours {
     background-color: $-tours-background-color;
     position: relative;
     padding-bottom: 5rem;
-}
+    }
 
-%tours__before-and-after {
+    %tours__before-and-after {
     bottom: 0;
     left: 0;
     right: 0;
@@ -23,36 +24,37 @@ $-tours-icon-size: 3rem;
     text-shadow: 0 0 1px white;
     text-align: center;
     z-index: 0;
-}
+    }
 
-@mixin -tours__before-and-after-stroke($color) {
+    @mixin -tours__before-and-after-stroke($color) {
     @supports (-webkit-text-stroke: 2px #{$color}) or (text-stroke: 2px #{$color}) {
         -webkit-text-stroke: 2px #{$color};
         text-stroke: 2px #{$color};
         text-shadow: none;
     }
-}
+    }
 
-.tours::before {
+    .tours::before {
     @extend %tours__before-and-after;
 
     @include -tours__before-and-after-stroke(rgba(255, 255, 255, 0.2));
-}
+    }
 
-.tours::after {
+    .tours::after {
     @extend %tours__before-and-after;
 
     @include -tours__before-and-after-stroke(transparent);
-}
+    }
 
-.tours__container { 
+    .tours__container { 
     position: relative;
     z-index: 1;
 
     @include make-container();
-}
+    }
 
-.tours__heading {
+
+    .tours__heading {
     color: white;
     text-transform: uppercase;
     font-weight: 500;
@@ -61,66 +63,76 @@ $-tours-icon-size: 3rem;
     padding-top: 4rem;
     padding-bottom: 4rem;
     font-size: 2rem;
-}
+    }
 
-.tours__cards {
+
+    .tours__cards {
     display: flex;
-}
+    }
 
-.tours__card {
+    .tours__card {
     width: 20%;
     position: relative;
     height: 21rem;
     overflow: hidden;
-}
 
-.tours__card-icon-background {
+    transform: scale(1);
+    transition: transform $-tours-animation-duration ease-in-out;
+
+    &:hover {
+        transform: scale(1.1);
+        box-shadow: 0 0 0.25rem black;
+    }
+    }
+
+    .tours__card-icon-background {
     background-color: $color-primary;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: $-tours-icon-size;
+    box-shadow: 0 0 0.125rem rgba(0, 0, 0, 0.5);
 
     transform: translate(calc(-100% + #{$-tours-icon-size}), 0);
 
-    transition: transform 1s ease-in-out;
+    transition: transform $-tours-animation-duration ease-in-out;
 
     .tours__card:hover & {
         transform: translate(0, 0);
     }
-}
+    }
 
-.tours__card-img {
+    .tours__card-img {
     width: 100%;
     position: absolute;
     top: 0;
     left: 0;
 
     filter: brightness(80%);
-}
+    }
 
-.tours__card-icon-container {    
+    .tours__card-icon-container {    
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
 
     transform: translate(0, 0);
-    transition: transform 1s ease-in-out;
+    transition: transform $-tours-animation-duration ease-in-out;
 
     .tours__card:hover & {
         transform: translate(calc(50% - #{$-tours-icon-size / 2}), 0);
     }
-}
+    }
 
-.tours__card-icon { 
+    .tours__card-icon { 
     width: $-tours-icon-size;
     color: white;
     display: block;
-}
+    }
 
-.tours__card-content {
+    .tours__card-content {
     position: absolute;
     left: 0;
     right: 0;
@@ -133,38 +145,38 @@ $-tours-icon-size: 3rem;
     background-image: linear-gradient(180deg, transparent 0%, rgba(0, 0, 0, 0.25) 20%);
 
     transform: translate(0, calc(100% - 7.25rem));
-    transition: transform 1s ease-in-out;
+    transition: transform $-tours-animation-duration ease-in-out;
 
     .tours__card:hover & {
         transform: translate(0, 0);
     }
-}
+    }
 
-.tours__card-heading {
+    .tours__card-heading {
     font-size: 1.1rem;
     margin-bottom: 0.25rem;
-}
+    }
 
-.tours__card-location {
+    .tours__card-location {
     font-size: 0.9rem;
     margin-bottom: 0.6rem;
     display: flex;
-}
+    }
 
-.tours__card-location-icon {
+    .tours__card-location-icon {
     font-size: 1.25rem;
-}
+    }
 
-.tours__card-location-text {
+    .tours__card-location-text {
     line-height: 1.9rem;
     padding-left: 0.15rem;
-}
+    }
 
-.tours__card-desc {
+    .tours__card-desc {
     font-size: 0.8rem;
     padding: 0.9rem 0;    
     background-image: linear-gradient(90deg, $color-primary 60%, transparent 60%);
     background-position-y: top;
     background-repeat: no-repeat;
     background-size: 100% 0.125rem;
-}
+    }
