--- a/Fotography/styles/pages/home/_tours.scss
+++ b/Fotography/styles/pages/home/_tours.scss
@@ -8,7 +8,7 @@ $-tours-animation-duration: 0.25s;
 .tours {
     background-color: $-tours-background-color;
     position: relative;
-    padding-bottom: 5rem;
+    padding-bottom: 8.5rem;
 }
 
 %tours__before-and-after {
@@ -139,6 +139,8 @@ $-tours-animation-duration: 0.25s;
     width: $-tours-icon-size;
     color: white;
     display: block;
+
+    filter: drop-shadow(0 0 0.5rem rgba(0, 0, 0, 0.5));
 }
 
 .tours__card-content {
