--- a/Fotography/styles/pages/home/_tours.scss
+++ b/Fotography/styles/pages/home/_tours.scss
@@ -19,11 +19,13 @@ $-tours-animation-duration: 0.25s;
     content: "Tame the wild";
     text-transform: uppercase;
     color: $-tours-background-color;
-    font-size: 10rem;
+    font-size: min(calc(100vw / 9), 10rem);
     font-weight: bold;
     text-shadow: 0 0 1px white;
     text-align: center;
     z-index: 0;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 @mixin -tours__before-and-after-stroke($color) {
@@ -61,7 +63,7 @@ $-tours-animation-duration: 0.25s;
     letter-spacing: 0.1em;
     text-align: center;
     padding-top: 4rem;
-    padding-bottom: 4rem;
+    padding-bottom: 1rem;
     font-size: 2rem;
 }
 
