--- a/Fotography/styles/pages/home/_tours.scss
+++ b/Fotography/styles/pages/home/_tours.scss
@@ -75,7 +75,7 @@ $-tours-animation-duration: 0.25s;
 }
 
 .tours__card {
-    flex: 0 0 (71rem / 5);
+    flex: 0 0 (71rem * 0.2);
     position: relative;
     margin-top: 3rem;
     height: 21rem;
@@ -136,7 +136,7 @@ $-tours-animation-duration: 0.25s;
     transition: transform $-tours-animation-duration ease-in-out;
 
     .tours__card:hover & {
-        transform: translate(calc(50% - #{$-tours-icon-size / 2}), 0);
+        transform: translate(calc(50% - #{$-tours-icon-size * 0.5}), 0);
     }
 }
 
