--- a/Fotography/styles/pages/home/_offers.scss
+++ b/Fotography/styles/pages/home/_offers.scss
@@ -1,7 +1,8 @@
+@use "sass:color";
 @use "sass:math";
 
-@use "sass:color";
 @use "../../abstracts" as *;
+
 
 $-offers-card-border-width: math.div(1rem, 16);
 $-offers-card-margin: 0.66rem;
@@ -47,8 +48,22 @@ $-offers-card-margin: 0.66rem;
 }
 
 .offers__image-container {
+    position: relative;
     background-color: $color-primary;
     margin: -$-offers-card-border-width -$-offers-card-border-width 0 -$-offers-card-border-width;
+}
+
+.offers__image-container::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 4rem;
+    background-image: linear-gradient(-5.71deg, white 50%, transparent 50%);
+    background-repeat: no-repeat;
+    background-position: 50% 100%;
+
 }
 
 .offers__image {
