--- a/Fotography/styles/pages/home/_offers.scss
+++ b/Fotography/styles/pages/home/_offers.scss
@@ -5,6 +5,7 @@
 
 
 $-offers-card-border-width: math.div(1rem, 16);
+$-offers-card-border-color: rgba(0, 0, 0, 0.15);
 $-offers-card-margin: 0.66rem;
 
 .offers {
@@ -27,9 +28,9 @@ $-offers-card-margin: 0.66rem;
     padding: 0;
     background-color: white;
     box-shadow: 0.5rem 0.5rem 2rem black;
-    border-left: $-offers-card-border-width solid #e2e2e2;
-    border-right: $-offers-card-border-width solid #e2e2e2;
-    border-top: $-offers-card-border-width solid #e2e2e2;
+    border-left: $-offers-card-border-width solid $-offers-card-border-color;
+    border-right: $-offers-card-border-width solid $-offers-card-border-color;
+    border-top: $-offers-card-border-width solid $-offers-card-border-color;
 
     position: relative;
 }
@@ -50,7 +51,22 @@ $-offers-card-margin: 0.66rem;
 .offers__image-container {
     position: relative;
     background-color: $color-primary;
-    margin: -$-offers-card-border-width -$-offers-card-border-width 0 -$-offers-card-border-width;
+    margin-top: -$-offers-card-border-width;
+    margin-right: -$-offers-card-border-width;
+    margin-left: -$-offers-card-border-width;
+}
+
+.offers__image-container::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    top: 0;
+    z-index: 1;
+    border-top: $-offers-card-border-width solid $-offers-card-border-color;
+    border-right: $-offers-card-border-width solid $-offers-card-border-color;
+    border-left: $-offers-card-border-width solid $-offers-card-border-color;
 }
 
 .offers__image-container::after {
@@ -63,7 +79,6 @@ $-offers-card-margin: 0.66rem;
     background-image: linear-gradient(-$slope-incline, white 49.7%, transparent 50.3%);
     background-repeat: no-repeat;
     background-position: 50% 100%;
-
 }
 
 .offers__image {
