--- a/Fotography/styles/pages/home/_offers.scss
+++ b/Fotography/styles/pages/home/_offers.scss
@@ -25,7 +25,7 @@ $-offers-card-margin: 0.66rem;
 .offers__card {
     flex: 1 0 0px;
     margin: 0 $-offers-card-margin;
-    padding: 0;
+    padding: 0 0 1.5rem 0;
     background-color: white;
     box-shadow: 0.5rem 0.5rem 2rem black;
     border-left: $-offers-card-border-width solid $-offers-card-border-color;
