--- a/Fotography/styles/pages/home/_offers.scss
+++ b/Fotography/styles/pages/home/_offers.scss
@@ -86,3 +86,40 @@ $-offers-card-margin: 0.66rem;
     filter: grayscale(100%);
     mix-blend-mode: multiply;
 }
+
+.offers__content {
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+.offers__content-heading {
+    color: $color-secondary;
+    font-size: 1.75rem;
+    font-weight: 500;
+}
+
+.offers__content-subheading {
+    color: $color-primary;
+    font-size: 1rem;
+}
+
+.offers__content-info {
+    margin-top: 1rem;
+    border-top: 1px solid rgba(0, 0, 0, 0.15);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+    display: flex;
+}
+
+%offers__content-info-column {
+    flex: 1 1 50%;
+    color: $color-secondary;
+    text-align: center;
+}
+
+.offers__content-info-duration {
+    @extend %offers__content-info-column;
+}
+
+.offers__content-info-level {
+    @extend %offers__content-info-column;
+}
