--- a/Fotography/styles/pages/home/_offers.scss
+++ b/Fotography/styles/pages/home/_offers.scss
@@ -104,16 +104,29 @@ $-offers-card-margin: 0.66rem;
 }
 
 .offers__content-info {
+    $-half-pixel-width: math.div(1rem, 32);
+
     margin-top: 1rem;
     border-top: 1px solid rgba(0, 0, 0, 0.15);
     border-bottom: 1px solid rgba(0, 0, 0, 0.15);
     display: flex;
+    background-image: linear-gradient(90deg, 
+        transparent calc(50% - #{$-half-pixel-width}),
+        rgba(0, 0, 0, 0.15) calc(50% - #{$-half-pixel-width}),
+        rgba(0, 0, 0, 0.15) calc(50% + #{$-half-pixel-width}),
+        transparent calc(50% + #{$-half-pixel-width})
+    );
+    background-repeat: no-repeat;
+    background-size: 100% 75%;
+    background-position: center center;
 }
 
 %offers__content-info-column {
     flex: 1 1 50%;
     color: $color-secondary;
     text-align: center;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 
 .offers__content-info-duration {
@@ -122,4 +135,8 @@ $-offers-card-margin: 0.66rem;
 
 .offers__content-info-level {
     @extend %offers__content-info-column;
+}
+
+.offers__content-info-duration-text {
+    padding-left: 0.33rem;
 }
