--- a/Fotography/styles/pages/home/_offers.scss
+++ b/Fotography/styles/pages/home/_offers.scss
@@ -25,9 +25,9 @@ $-offers-card-margin: 0.66rem;
 .offers__card {
     flex: 1 0 0px;
     margin: 0 $-offers-card-margin;
-    padding: 0 0 1.5rem 0;
+    padding: 0 0 2rem 0;
     background-color: white;
-    box-shadow: 0.5rem 0.5rem 2rem black;
+    box-shadow: 0.5rem 0.5rem 2rem rgba(0, 0, 0, 0.5);
     border-left: $-offers-card-border-width solid $-offers-card-border-color;
     border-right: $-offers-card-border-width solid $-offers-card-border-color;
     border-top: $-offers-card-border-width solid $-offers-card-border-color;
@@ -88,8 +88,8 @@ $-offers-card-margin: 0.66rem;
 }
 
 .offers__content {
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
 }
 
 .offers__content-heading {
@@ -139,4 +139,18 @@ $-offers-card-margin: 0.66rem;
 
 .offers__content-info-duration-text {
     padding-left: 0.33rem;
+}
+
+.offers__content-price-container {
+    padding-top: 0.75rem;
+    font-size: 1rem;
+    color: $color-secondary;
+}
+
+.offers__content-price {
+    display: block;
+    color: $color-primary;
+    font-weight: 500;
+    font-size: 2rem;
+    line-height: 0.9em;
 }
