14-23  Hover-Effekt bauen (Teil 2)

--- a/Fotography/styles/components/_button.scss
+++ b/Fotography/styles/components/_button.scss
@@ -45,3 +45,8 @@
         border: 0.125rem solid $color-secondary-dark;
     }
 }
+
+.button--slim {
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
