--- a/Fotography/styles/pages/home/_offers.scss
+++ b/Fotography/styles/pages/home/_offers.scss
@@ -7,6 +7,7 @@
 $-offers-card-border-width: math.div(1rem, 16);
 $-offers-card-border-color: rgba(0, 0, 0, 0.15);
 $-offers-card-margin: 0.66rem;
+$-half-pixel-width: math.div(1rem, 32);
 
 .offers {
     background-color: rgb(240, 240, 240);
@@ -104,8 +105,6 @@ $-offers-card-margin: 0.66rem;
 }
 
 .offers__content-info {
-    $-half-pixel-width: math.div(1rem, 32);
-
     margin-top: 1rem;
     border-top: 1px solid rgba(0, 0, 0, 0.15);
     border-bottom: 1px solid rgba(0, 0, 0, 0.15);
@@ -164,8 +163,27 @@ $-offers-card-margin: 0.66rem;
     z-index: 2;
 
     background-color: $color-primary;
+    background-image: linear-gradient(90deg,
+        transparent calc(50% - #{$-half-pixel-width}),
+      white calc(50% - #{$-half-pixel-width}),
+      white calc(50% + #{$-half-pixel-width}),
+        transparent calc(50% + #{$-half-pixel-width})
+    ), linear-gradient(135deg,
+        $color-primary 0%,
+        color.scale($color-primary, $lightness: -20%) 100%
+    );
+    background-repeat: no-repeat, no-repeat;
+    background-position: center top, center center;
+    background-size: 100% calc(50% - 4rem), 100% 100%;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    opacity: 0;
+    transition: opacity 0.25s ease-in-out;
+    .offers__card:hover & {
+        opacity: 1;
+    }
 }
