14-25 Responsive Design für Offer-Bereich (Teil 1)

--- a/Fotography/styles/pages/home/_offers.scss
+++ b/Fotography/styles/pages/home/_offers.scss
@@ -24,7 +24,9 @@ $-half-pixel-width: math.div(1rem, 32);
 }
 
 .offers__card {
-    flex: 1 0 0px;
+    $-width: math.div(100%, 3);
+
+    width: calc(#{$-width} - #{($-offers-card-margin * 2 + 0.001rem)});
     margin: 0 $-offers-card-margin;
     padding: 0 0 2rem 0;
     background-color: white;
@@ -97,6 +99,9 @@ $-half-pixel-width: math.div(1rem, 32);
     color: $color-secondary;
     font-size: 1.75rem;
     font-weight: 500;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .offers__content-subheading {
