--- a/Fotography/styles/pages/home/_offers.scss
+++ b/Fotography/styles/pages/home/_offers.scss
@@ -214,3 +214,11 @@ $-half-pixel-width: math.div(1rem, 32);
         opacity: 1;
     }
 }
+
+
+.offers__card-container--flip {
+    .offers__card-primary {
+        transform: rotateY(0deg);
+        transform-style: preserve-3d;
+    }
+}
