--- a/Fotography/styles/pages/home/_offers.scss
+++ b/Fotography/styles/pages/home/_offers.scss
@@ -243,3 +243,26 @@ $-half-pixel-width: math.div(1rem, 32);
         backface-visibility: hidden;
     }
 }
+
+.offers__card-container--3d {
+    perspective: 50rem;
+
+    .offers__card-hover {
+        display: none;
+    }
+
+    .offers__card {
+        transition: transform 0.5s ease-in-out;
+        transform: rotateX(calc(calc(var(--mouse-y, 0.5) - 0.5) * -20deg)) rotateY(calc(calc(var(--mouse-x, 0.5) - 0.5) * 20deg));
+    }
+
+    &:hover .offers__card {
+        transition: transform 0.1s linear;
+    }
+
+
+}
+
+.offers__card-container--3d-hover {
+
+}
