--- a/Fotography/styles/components/_icon.scss
+++ b/Fotography/styles/components/_icon.scss
@@ -3,6 +3,10 @@
     fill: currentColor;
     height: 1em;
     vertical-align: middle;
-    position: relative;
-    top: -0.075em;
+
+    &:not(.icon--no-position) {
+        position: relative;
+        top: -0.075em;
+    }
+    
 }
